update private method handleTaggedElement() argument signature List -> LinkedList for direct access
git-svn-id: svn+ssh://developer.mitre.org/svnroot/giscore/trunk@1039 5c99b798-f2dd-11dd-9a12-8f84353f4b73